[package]
name = "concurrency_example"
version = "0.1.0"
authors = ["Maxime <emixampons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
rand = "0.7"
switchyard = "*"
ocl = "*"